@@ -8,6 +8,8 @@ import org.springframework.data.domain.Sort;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -16,13 +18,17 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import poly.edu.sneaker.Model.*;
 import poly.edu.sneaker.Service.*;
 
+import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Array;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.text.SimpleDateFormat;
+import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/sanpham")
@@ -41,48 +47,77 @@ public class SanPhamController {
     private SizeService sizeService;
     @Autowired
     private MauSacService mauSacService;
+    @Autowired
+    private NhanVienService nhanVienService;
+
+    public String getCurrentUserEmail() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication != null && authentication.isAuthenticated()) {
+            return authentication.getName(); // Trả về email của người dùng đã đăng nhập
+        }
+        return null; // Nếu chưa đăng nhập, trả về null hoặc giá trị mặc định
+    }
 
 
     @GetMapping("/hienthi")
-    public String hienThi(Model model,
-                          @RequestParam(defaultValue = "0") int page,
-                          @RequestParam(required = false) String keyword,
-                          @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Date startDate,
-                          @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") Date endDate) {
-        if (page < 0) {
-            page = 0;
-        }
-        int size = 5;
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "ngayTao"));
+    public String hienThiSanPham(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(required = false) String keyword,
+            @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") LocalDate startDate,
+            @RequestParam(required = false) @DateTimeFormat(pattern = "yyyy-MM-dd") LocalDate endDate,
+            @RequestParam(required = false) Integer idDanhMuc,
+            @RequestParam(required = false) Integer idChatLieu,
+            @RequestParam(required = false) Integer idHang,
+            Model model) {
 
-        // Xử lý logic mặc định cho ngày
-        Date now = new Date();
-        Calendar cal = Calendar.getInstance();
+        // Xử lý keyword
 
+        String searchKeyword = (keyword != null && !keyword.trim().isEmpty()) ? "%" + keyword.trim() + "%" : null;
+
+        // Xử lý ngày tháng
         if (startDate != null && endDate == null) {
-            endDate = now;
+            endDate = LocalDate.now();
         } else if (endDate != null && startDate == null) {
-            cal.setTime(endDate);
-            cal.add(Calendar.DATE, -30);
-            startDate = cal.getTime();
+            startDate = endDate.minusMonths(1);
         }
 
-        Page<SanPham> lstSanPham = sanPhamService.searchSanPham(keyword, startDate, endDate, pageable);
 
-        // Truyền lại dữ liệu tìm kiếm cho view
+        // Lấy danh sách cho dropdown
+        model.addAttribute("lstDanhMuc", danhMucService.getAllDanhMucs());
+        model.addAttribute("lstChatLieu", chatLieuService.getAllChatLieus());
+        model.addAttribute("lstHang", hangService.getAllHangs());
+
+        // Thực hiện lọc
+        Page<SanPham> pageSanPham = sanPhamService.filterSanPham(
+                searchKeyword, startDate, endDate,
+                idDanhMuc, idChatLieu, idHang,
+                page, 10 // Số lượng item mỗi trang
+        );
+        // Đưa dữ liệu vào model
+        model.addAttribute("lstSanPham", pageSanPham.getContent());
+        model.addAttribute("currentPage", pageSanPham.getNumber());
+        model.addAttribute("totalPages", pageSanPham.getTotalPages());
         model.addAttribute("keyword", keyword);
         model.addAttribute("startDate", startDate);
         model.addAttribute("endDate", endDate);
-
-        if (lstSanPham.isEmpty()) {
-            model.addAttribute("message", "Không tìm thấy sản phẩm.");
-        }
-
-        model.addAttribute("lstSanPham", lstSanPham.getContent());
-        model.addAttribute("currentPage", lstSanPham.getNumber());
-        model.addAttribute("totalPages", lstSanPham.getTotalPages());
+        model.addAttribute("idDanhMuc", idDanhMuc);
+        model.addAttribute("idChatLieu", idChatLieu);
+        model.addAttribute("idHang", idHang);
 
         return "admin/sanpham/listSanPham";
+    }
+
+    @PostMapping("/update-status")
+    @ResponseBody
+    public ResponseEntity<?> updateStatus(@RequestParam("id") int id, @RequestParam("status") boolean status) {
+        SanPham sanPham = sanPhamService.findById(id);
+        if (sanPham == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy sản phẩm"));
+        }
+        sanPham.setTrangThai(status);
+        sanPhamService.save(sanPham);
+        return ResponseEntity.ok().body(Collections.singletonMap("message", status ? "Mở trạng thái hoạt động" : "Tắt trạng thái hoạt động"));
+
     }
 
     @GetMapping("/themsanpham")
@@ -108,31 +143,39 @@ public class SanPhamController {
     }
 
     @PostMapping("/themsanpham")
-    public String them(@ModelAttribute SanPham sanPham,
-                       @RequestParam("hang") int idHang,
-                       @RequestParam("danhMuc") int idDanhMuc,
-                       @RequestParam("chatLieu") int idChatLieu,
-                       RedirectAttributes redirectAttributes) {
+    @ResponseBody
+    public ResponseEntity<?> them(@RequestBody Map<String, Object> sanPhamRQ) {
         // Gán giá trị từ combobox vào sản phẩm
-        sanPham.setIdHang(hangService.getHangById(idHang));
-        sanPham.setIdDanhMuc(danhMucService.findDanhMucById(idDanhMuc));
-        sanPham.setIdChatLieu(chatLieuService.getChatLieuById(idChatLieu));
-        List<SanPham> lstSP = sanPhamService.getAllSanPhams();
-        for (SanPham sp : lstSP) {
-            if (sp.getTenSanPham().trim().equalsIgnoreCase(sanPham.getTenSanPham().trim())) {
-                redirectAttributes.addFlashAttribute("errorMessage", "Sản phẩm đã tồn tại!");
-                return "redirect:/sanpham/themsanpham";
-            }
+        if (sanPhamRQ.isEmpty()) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Dữ liệu truyền vào không hợp lệ"));
         }
-
+        if (sanPhamRQ.get("idHang").equals("") || hangService.getHangById(Integer.parseInt(sanPhamRQ.get("idHang").toString())) == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy hãng"));
+        }
+        if (sanPhamRQ.get("idDanhMuc").equals("") || danhMucService.findDanhMucById(Integer.parseInt(sanPhamRQ.get("idDanhMuc").toString())) == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy danh mục"));
+        }
+        if (sanPhamRQ.get("idChatLieu").equals("") || chatLieuService.getChatLieuById(Integer.parseInt(sanPhamRQ.get("idChatLieu").toString())) == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy chất liệu"));
+        }
+        SanPham sanPham = new SanPham();
+        sanPham.setTenSanPham((String) sanPhamRQ.get("tenSanPham"));
+        sanPham.setIdHang(hangService.getHangById(Integer.parseInt(sanPhamRQ.get("idHang").toString())));
+        sanPham.setIdDanhMuc(danhMucService.findDanhMucById(Integer.parseInt(sanPhamRQ.get("idDanhMuc").toString())));
+        sanPham.setIdChatLieu(chatLieuService.getChatLieuById(Integer.parseInt(sanPhamRQ.get("idChatLieu").toString())));
         sanPham.setTrangThai(true);
         sanPham.setNgaySua(new Date());
         sanPham.setNgayTao(new Date());
+        List<SanPham> lstSP = sanPhamService.getAllSanPhams();
+        for (SanPham sp : lstSP) {
+            if (sp.getTenSanPham().trim().equalsIgnoreCase(sanPham.getTenSanPham().trim())) {
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Tên phẩm đã tồn tại"));
+            }
+        }
         // Lưu sản phẩm vào database
         sanPhamService.save(sanPham);
         // Thông báo thành công
-        redirectAttributes.addFlashAttribute("successMessage", "Thêm sản phẩm thành công!");
-        return "redirect:/sanpham/hienthi";
+        return ResponseEntity.ok().body(Map.of("message", "Thêm sản phẩm thành công", "success", true));
 
     }
 
@@ -162,196 +205,413 @@ public class SanPhamController {
         return "admin/sanpham/updateSanPham";
     }
 
-    @PostMapping("/capnhatsanpham/{id}")
-    public String updateSanPham(@PathVariable("id") int id, @ModelAttribute("sanPham") SanPham sanPham, RedirectAttributes redirectAttributes
+    @PutMapping("/capnhatsanpham/{idSanPham}")
+    @ResponseBody
+    public ResponseEntity<?> updateSanPham(@PathVariable("idSanPham") int id, @RequestBody Map<String, Object> sanPham
     ) {
         try {
             SanPham existingSanPham = sanPhamService.findById(id);
-            if (sanPham.getTrangThai() == null) {
-                sanPham.setTrangThai(false);
-            }
             if (existingSanPham != null) {
-                existingSanPham.setTenSanPham(sanPham.getTenSanPham());
-                existingSanPham.setIdHang(sanPham.getIdHang());
-                existingSanPham.setIdChatLieu(sanPham.getIdChatLieu());
-                existingSanPham.setIdDanhMuc(sanPham.getIdDanhMuc());
+                List<SanPham> lstSanPham = sanPhamService.getAllSanPhams();
+                String tenSanPham = sanPham.get("tenSanPham").toString();
+                int idHang = Integer.parseInt((String) sanPham.get("idHang"));
+                int idDanhMuc = Integer.parseInt((String) sanPham.get("idDanhMuc"));
+                int idChatLieu = Integer.parseInt((String) sanPham.get("idChatLieu"));
+                boolean trangThai = (boolean) sanPham.get("trangThai");
+                for (SanPham sp : lstSanPham) {
+                    if (sp.getId() != existingSanPham.getId() && sp.getTenSanPham().equalsIgnoreCase(tenSanPham)
+                    ) {
+                        return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Tên sản phẩm đã tồn tại"));
+                    }
+                }
+                existingSanPham.setTenSanPham(tenSanPham);
+                existingSanPham.setIdHang(hangService.getHangById(idHang));
+                existingSanPham.setIdChatLieu(chatLieuService.getChatLieuById(idChatLieu));
+                existingSanPham.setIdDanhMuc(danhMucService.findDanhMucById(idDanhMuc));
                 existingSanPham.setNgaySua(new Date());
-                existingSanPham.setTrangThai(sanPham.getTrangThai() ? true : false);
+                existingSanPham.setTrangThai(trangThai);
                 sanPhamService.update(existingSanPham);
-                redirectAttributes.addFlashAttribute("", "Cập nhật sản phẩm thành công!");
+                return ResponseEntity.ok().body(Collections.singletonMap("message", "Cập nhật sản phẩm thành công"));
             } else {
-                redirectAttributes.addFlashAttribute("errorMessage", "Sản phẩm không tồn tại!");
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy sản phẩm"));
+
             }
         } catch (Exception e) {
-            redirectAttributes.addFlashAttribute("errorMessage", "Có lỗi xảy ra khi cập nhật sản phẩm!");
+            e.printStackTrace();
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Cập nhật sản phẩm thất bại"));
         }
 
-        return "redirect:/sanpham/chitietsanpham/" + id;
     }
 
     @PostMapping("/addctsanpham/{id}")
-    public String themChiTietSanPham(@PathVariable("id") int idSanPham,
-                                     @RequestParam("img") MultipartFile img,
-                                     @ModelAttribute ChiTietSanPham chiTietSanPham, RedirectAttributes redirectAttributes) {
+    @ResponseBody
+    public ResponseEntity<?> themChiTietSanPham(
+            @PathVariable("id") int idSanPham,
+            @RequestParam("img") MultipartFile[] imgs, // Thay đổi từ MultipartFile sang MultipartFile[]
+            @RequestParam("idSize") int idSize,
+            @RequestParam("idMauSac") int idMauSac,
+            @RequestParam("trongLuong") float trongLuong,
+            @RequestParam("giaNhap") float giaNhap,
+            @RequestParam("giaBan") float giaBan,
+            @RequestParam("soLuong") int soLuong,
+            @RequestParam(value = "moTa", required = false) String moTa) {
+
         try {
-
             List<ChiTietSanPham> lstCTSP = chiTietSanPhamService.findByIdSanPham(idSanPham);
-            String fileName =null;
-            if (chiTietSanPham != null) {
-                List<String> paths = new ArrayList<>();
-                if (!img.isEmpty()) {
-                    // Lưu file vào thư mục static/images
-                     fileName = img.getOriginalFilename();
 
-
-                    String uploadDir = "src/main/resources/static/images/";
-                    Path path = Paths.get(uploadDir + fileName);
-                    try {
-                        Files.copy(img.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
-                        paths.add(fileName); // Lưu đường dẫn ảnh để lưu DB
-                    } catch (IOException e) {
-                        e.printStackTrace();
-                    }
-                    // Ghép đường dẫn ảnh thành 1 chuỗi (ngăn cách bởi ,)
-                }
-                String allImages = ("/images/"+fileName);
-
-                ChiTietSanPham ctsp = new ChiTietSanPham();
-                ctsp.setIdSanPham(sanPhamService.findById(idSanPham));
-                ctsp.setIdSize(chiTietSanPham.getIdSize());
-                ctsp.setIdMauSac(chiTietSanPham.getIdMauSac());
-                for (ChiTietSanPham ct : lstCTSP) {
-                    if (ct.getIdSize().getId() == chiTietSanPham.getIdSize().getId()
-                            && ct.getIdMauSac().getId() == chiTietSanPham.getIdMauSac().getId()) {
-                        redirectAttributes.addFlashAttribute("errorMessage", "Chi tiết sản phẩm đã tồn tại");
-                        return "redirect:/sanpham/chitietsanpham/" + idSanPham;
-                    }
-                }
-
-                ctsp.setTrongLuong(chiTietSanPham.getTrongLuong());
-                ctsp.setGiaNhap(chiTietSanPham.getGiaNhap());
-                ctsp.setGiaBan(chiTietSanPham.getGiaBan());
-                ctsp.setSoLuong(chiTietSanPham.getSoLuong());
-                ctsp.setHinhAnh(allImages);
-                ctsp.setMoTa(chiTietSanPham.getMoTa());
-                ctsp.setNgayTao(new Date());
-                ctsp.setNgaySua(new Date());
-                ctsp.setTrangThai(true);
-                chiTietSanPhamService.saveChiTietSanPham(ctsp);
-                redirectAttributes.addFlashAttribute("successMessage", "Thêm chi tiết sản phẩm thành công");
-
-            } else {
-                redirectAttributes.addFlashAttribute("errrorMasage", "Có lỗi xảy ra khi thêm chi tiết sản phẩm");
+            // Kiểm tra Size và Màu sắc
+            if (sizeService.findById(idSize) == null) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Size không tồn tại"));
             }
-        } catch (Exception e) {
-            redirectAttributes.addFlashAttribute("errrorMasage", "Có lỗi xảy ra khi thêm chi tiết sản phẩm");
-        }
+            if (mauSacService.findById(idMauSac) == null) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Màu sắc không tồn tại"));
+            }
 
-        return "redirect:/sanpham/chitietsanpham/" + idSanPham;
+            // Xử lý lưu nhiều ảnh
+            List<String> imagePaths = new ArrayList<>();
+            if (imgs == null || imgs.length == 0) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "message", "Vui lòng chọn ít nhất 1 ảnh",
+                        "success", false
+                ));
+            }
+            if (imgs.length > 5) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "message", "Chỉ được upload tối đa 5 ảnh",
+                        "success", false
+                ));
+            }
+            for (MultipartFile img : imgs) {
+                if (!img.isEmpty()) {
+                    String fileName = System.currentTimeMillis() + "_" + img.getOriginalFilename(); // Tránh trùng tên
+                    String uploadDir = "src/main/resources/static/images/";
+
+                    // Tạo thư mục nếu chưa tồn tại
+                    File dir = new File(uploadDir);
+                    if (!dir.exists()) {
+                        dir.mkdirs();
+                    }
+
+                    // Lưu file vào thư mục
+                    Path path = Paths.get(uploadDir + fileName);
+                    Files.copy(img.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+                    imagePaths.add("/images/" + fileName); // Lưu đường dẫn ảnh
+                }
+            }
+
+            // Ghép các đường dẫn ảnh thành chuỗi (ngăn cách bằng dấu phẩy)
+            String allImages = String.join(",", imagePaths);
+
+            // Kiểm tra trùng lặp (Size + Màu sắc)
+            for (ChiTietSanPham ct : lstCTSP) {
+                if (ct.getIdSize().getId() == idSize && ct.getIdMauSac().getId() == idMauSac) {
+                    return ResponseEntity.badRequest().body(Map.of(
+                            "message", "Sản phẩm đã tồn tại",
+                            "success", false
+                    ));
+                }
+            }
+
+            // Tạo mới ChiTietSanPham
+            ChiTietSanPham ctsp = new ChiTietSanPham();
+            ctsp.setIdSanPham(sanPhamService.findById(idSanPham));
+            ctsp.setIdSize(sizeService.findById(idSize));
+            ctsp.setIdMauSac(mauSacService.findById(idMauSac));
+            ctsp.setTrongLuong(trongLuong);
+            ctsp.setGiaNhap(giaNhap);
+            ctsp.setGiaBan(giaBan);
+            ctsp.setSoLuong(soLuong);
+            ctsp.setHinhAnh(allImages); // Lưu chuỗi đường dẫn ảnh
+            ctsp.setMoTa(moTa);
+            ctsp.setNgayTao(new Date());
+            ctsp.setNgaySua(new Date());
+            ctsp.setTrangThai(true);
+
+            chiTietSanPhamService.saveChiTietSanPham(ctsp);
+
+            return ResponseEntity.ok().body(Map.of(
+                    "message", "Thêm sản phẩm thành công",
+                    "success", true
+            ));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.badRequest().body(Map.of(
+                    "message", "Thêm sản phẩm thất bại: " + e.getMessage(),
+                    "success", false
+            ));
+        }
+    }
+
+    @GetMapping("/chitietsanpham/fragment/{id}")
+    public String getTableFragment(
+            @PathVariable("id") int id,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            Model model
+    ) {
+        Pageable pages = PageRequest.of(page, size);
+        Page<ChiTietSanPham> pageCTSP = chiTietSanPhamService.findChiTietSanPhamByIDSanPham(id, pages);
+        model.addAttribute("lstCTSP", pageCTSP.getContent());
+        model.addAttribute("currentPage", page);
+        model.addAttribute("totalPages", pageCTSP.getTotalPages());
+        model.addAttribute("lstSize", sizeService.findAll());
+        model.addAttribute("lstMauSac", mauSacService.findAll());
+        return "fragments/chitietsanpham-table :: tableFragment";
     }
 
 
-    @PutMapping("/updateCTSP/{id}")
-    public ResponseEntity<?> updateSanPham(@PathVariable int id, @RequestBody Map<String, Object> chiTietSanPham) {
+    @GetMapping("/getSizeByMau/{id}")
+    @ResponseBody
+    public ResponseEntity<List<Size>> getSizeByMau(@PathVariable("id") int idSP, @RequestParam("idMau") int idMau) {
+        List<ChiTietSanPham> lstChiTietSanPham = chiTietSanPhamService.findByIdSanPham(idSP);
+
+        //Lấy ra các size đã có màu dược truyền vào
+        Set<Integer> sizeDaCo = lstChiTietSanPham.stream()
+                .filter(ctsp -> ctsp.getIdMauSac().getId() == idMau)
+                .map(ctsp -> ctsp.getIdSize().getId())
+                .collect(Collectors.toSet());
+        List<Size> lstSize = sizeService.findAll();
+
+        List<Size> lstSizeChuaCo = lstSize.stream()
+                .filter(size -> !sizeDaCo.contains(size.getId()))
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(lstSizeChuaCo);
+    }
+
+    @PostMapping("/updateCTSPWithImage/{id}")
+    @ResponseBody
+    public ResponseEntity<?> updateChiTietSanPhamWithImage(
+            @PathVariable int id,
+            @RequestParam("idSize") int idSize,
+            @RequestParam("idMauSac") int idMauSac,
+            @RequestParam("trongLuong") Float trongLuong,
+            @RequestParam("giaNhap") Float giaNhap,
+            @RequestParam("giaBan") Float giaBan,
+            @RequestParam("soLuong") int soLuong,
+            @RequestParam(value = "moTa", required = false) String moTa,
+            @RequestParam("trangThai") boolean trangThai,
+            @RequestParam(value = "hinhAnhFiles", required = false) MultipartFile[] hinhAnhFiles
+    ) {
         try {
             // Tìm sản phẩm theo ID
-            List<ChiTietSanPham> lstCTSP = chiTietSanPhamService.findByIdSanPham(id);
-
             ChiTietSanPham ctsp = chiTietSanPhamService.findById(id);
+
             if (ctsp == null) {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND)
                         .body(Collections.singletonMap("message", "Không tìm thấy sản phẩm!"));
             }
-            // Ép kiểu dữ liệu an toàn
-            Integer idSize = convertToInt(chiTietSanPham.get("idSize"));
-            Integer idMauSac = convertToInt(chiTietSanPham.get("idMauSac"));
-            Float trongLuong = convertToFloat(chiTietSanPham.get("trongLuong"));
-            Float giaNhap = convertToFloat(chiTietSanPham.get("giaNhap"));
-            Float giaBan = convertToFloat(chiTietSanPham.get("giaBan"));
-            Integer soLuong = convertToInt(chiTietSanPham.get("soLuong"));
-            String moTa = (chiTietSanPham.get("moTa") != null) ? chiTietSanPham.get("moTa").toString() : "";
-            Boolean trangThai = (chiTietSanPham.get("trangThai") != null) ?
-                    Boolean.parseBoolean(chiTietSanPham.get("trangThai").toString()) : false;
-            // Cập nhật thông tin
-            if (idSize != null) {
-                ctsp.setIdSize(sizeService.findById(idSize));
-                Size size = sizeService.findById(idSize);
-                size.getMaSize();
-
-            }
-            if (idMauSac != null) {
-                ctsp.setIdMauSac(mauSacService.findById(idMauSac));
-            }
-            ctsp.setTrongLuong((trongLuong != null) ? trongLuong : 0.0f);
-            ctsp.setGiaNhap((giaNhap != null) ? giaNhap : 0.0f);
-            ctsp.setGiaBan((giaBan != null) ? giaBan : 0.0f);
-            ctsp.setSoLuong((soLuong != null) ? soLuong : 0);
-            ctsp.setMoTa(moTa);
-            ctsp.setTrangThai(trangThai);
-
+            List<ChiTietSanPham> lstCTSP = chiTietSanPhamService.findByIdSanPham(ctsp.getIdSanPham().getId());
             for (ChiTietSanPham ct : lstCTSP) {
-                // Nếu không phải bản ghi đang cập nhật thì mới check
-                if (ct.getId() != ctsp.getId()
-                        && ct.getIdSize().getId().equals(idSize)
-                        && ct.getIdMauSac().getId().equals(idMauSac)) {
-                    return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Chi tiết sản phẩm đã tồn tại"));
+                if (ct.getId() != ctsp.getId() && ct.getIdSize().getId() == idSize && ct.getIdMauSac().getId() == idMauSac) {
+                    return ResponseEntity.badRequest().body(Map.of("message", "Chi tiết sản phẩm đã tồn tại", "success", false));
                 }
             }
+            if (giaNhap <= 0 || giaBan <= 0 || soLuong <= 0 || trongLuong <= 0) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Giá trị nhập vào phải lớn hơn 0"));
+            }
+            ctsp.setIdSize(sizeService.findById(idSize));
+            ctsp.setIdMauSac(mauSacService.findById(idMauSac));
+            ctsp.setTrongLuong(trongLuong);
+            ctsp.setGiaNhap(giaNhap);
+            ctsp.setGiaBan(giaBan);
+            ctsp.setSoLuong(soLuong);
+            ctsp.setMoTa(moTa != null ? moTa : "");
+            ctsp.setTrangThai(trangThai);
+            ctsp.setNgaySua(new Date());
+            ;
+            // Xử lý ảnh nếu có
+            if (hinhAnhFiles != null && hinhAnhFiles.length > 0) {
+                List<String> newImagePaths = new ArrayList<>();
 
+                // Lưu các ảnh mới
+                for (MultipartFile file : hinhAnhFiles) {
+                    if (!file.isEmpty()) {
+                        String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+                        Path path = Paths.get("src/main/resources/static/images/" + fileName);
+                        Files.copy(file.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+                        newImagePaths.add("/images/" + fileName);
+                    }
+                }
+
+                // Kết hợp với ảnh cũ (nếu muốn giữ lại)
+                // Hoặc chỉ lưu ảnh mới: ctsp.setHinhAnh(String.join(",", newImagePaths));
+                String currentImages = ctsp.getHinhAnh();
+                if (currentImages != null && !currentImages.isEmpty()) {
+                    newImagePaths.addAll(Arrays.asList(currentImages.split(",")));
+                }
+                ctsp.setHinhAnh(String.join(",", newImagePaths));
+
+            }
             // Gọi service để cập nhật dữ liệu
             chiTietSanPhamService.update(ctsp);
-
-            return ResponseEntity.ok(Collections.singletonMap("success", true));
-
-
+            return ResponseEntity.ok(Map.of("message", "Cập nhật sản phẩm thành công", "success", true));
         } catch (Exception e) {
             e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+            return ResponseEntity.badRequest()
                     .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
         }
     }
 
 
-
-
-    private int convertToInt(Object value) {
-        try {
-            if (value instanceof Number) {
-                return ((Number) value).intValue();
-            }
-            return Integer.parseInt(value.toString());
-        } catch (NumberFormatException e) {
-            return 0; // hoặc có thể ném ngoại lệ tùy vào yêu cầu của bạn
-        }
-    }
-
-    @GetMapping("/createProductValidations")
+    @PostMapping("/them-bien-the")
     @ResponseBody
-    public ResponseEntity<?> createProdcutValidations(@RequestParam("idSanPham") int idSanPham) {
+    public ResponseEntity<?> themBienThe(
+            @RequestParam("idSanPham") int idSanPham,
+            @RequestParam("idMauSac") int idMauSac,
+            @RequestParam("hinhAnh") List<MultipartFile> hinhAnh,
+            @RequestParam Map<String, String> params) {
 
         try {
-            ArrayList<ChiTietSanPham> chiTietSanPhams = sanPhamService.createProductValidations(idSanPham);
-            return ResponseEntity.ok().body(Map.of("success", "Thêm sản phẩm thanh công"));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return ResponseEntity.badRequest().body(Map.of("message", "Tất cả sản phẩm đều đã được tạo"));
-    }
-    // Hàm hỗ trợ chuyển đổi kiểu dữ liệu an toàn
+            List<ChiTietSanPham> lstChiTietSanPham = chiTietSanPhamService.findByIdSanPham(idSanPham);
+            // Kiểm tra sản phẩm và danh sách biến thể hiện tại
+            SanPham sanPham = sanPhamService.findById(idSanPham);
+            MauSac mauSac = mauSacService.findMauSacById(idMauSac);
 
-
-    private float convertToFloat(Object value) {
-        try {
-            if (value instanceof Number) {
-                return ((Number) value).floatValue();
+            if (sanPham == null || mauSac == null) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "message", "Không tìm thấy sản phẩm hoặc màu sắc"
+                ));
             }
-            return Float.parseFloat(value.toString());
 
-        } catch (NumberFormatException e) {
-            return 0;
+            // Kiểm tra ảnh
+            if (hinhAnh == null || hinhAnh.isEmpty() || hinhAnh.get(0).isEmpty()) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "message", "Vui lòng chọn ít nhất 1 ảnh"
+                ));
+            }
+
+            List<ChiTietSanPham> lstCTSPNew = new ArrayList<>();
+            int index = 0;
+
+            while (true) {
+                String idSizeKey = "sizes[" + index + "].idSize";
+                String giaNhapKey = "sizes[" + index + "].giaNhap";
+                String giaBanKey = "sizes[" + index + "].giaBan";
+                String soLuongKey = "sizes[" + index + "].soLuong";
+                String trongLuongKey = "sizes[" + index + "].trongLuong";
+                if (!params.containsKey(idSizeKey)) break;
+
+                try {
+                    int idSize = Integer.parseInt(params.get(idSizeKey));
+                    float giaNhap = Float.parseFloat(params.get(giaNhapKey));
+                    float giaBan = Float.parseFloat(params.get(giaBanKey));
+                    int soLuong = Integer.parseInt(params.get(soLuongKey));
+                    float trongLuong = Float.parseFloat(params.get(trongLuongKey));
+                    // Kiểm tra size có tồn tại không
+                    Size size = sizeService.findById(idSize);
+                    if (size == null) {
+                        return ResponseEntity.badRequest().body(Map.of(
+                                "success", false,
+                                "message", "Size không tồn tại ở dòng " + (index + 1)
+                        ));
+                    }
+
+                    // Kiểm tra trùng biến thể
+                    boolean isExist = lstChiTietSanPham.stream()
+                            .anyMatch(ctsp -> ctsp.getIdSanPham().getId() == idSanPham && ctsp.getIdSize().getId() == idSize && ctsp.getIdMauSac().getId() == idMauSac);
+
+                    if (isExist) {
+                        return ResponseEntity.badRequest().body(Map.of(
+                                "success", false,
+                                "message", "Biến thể đã tồn tại (Size: " + size.getTenSize() + ")"
+                        ));
+                    }
+
+                    // Tạo mới ChiTietSanPham
+                    ChiTietSanPham chiTietSanPham = new ChiTietSanPham();
+                    chiTietSanPham.setIdSanPham(sanPham);
+                    chiTietSanPham.setIdMauSac(mauSac);
+                    chiTietSanPham.setIdSize(size);
+                    chiTietSanPham.setGiaNhap(giaNhap);
+                    chiTietSanPham.setGiaBan(giaBan);
+                    chiTietSanPham.setSoLuong(soLuong);
+                    chiTietSanPham.setTrongLuong(trongLuong);
+                    chiTietSanPham.setTrangThai(true);
+                    chiTietSanPham.setNgayTao(new Date());
+                    chiTietSanPham.setNgaySua(new Date());
+
+                    // Xử lý lưu ảnh
+                    List<String> imagePaths = new ArrayList<>();
+                    for (MultipartFile file : hinhAnh) {
+                        if (!file.isEmpty()) {
+                            // Validate file
+                            if (file.getSize() > 5 * 1024 * 1024) {
+                                return ResponseEntity.badRequest().body(Map.of(
+                                        "success", false,
+                                        "message", "Ảnh " + file.getOriginalFilename() + " vượt quá 5MB"
+                                ));
+                            }
+
+                            String contentType = file.getContentType();
+                            if (contentType == null ||
+                                    (!contentType.equals("image/jpeg") &&
+                                            !contentType.equals("image/jpg") &&
+                                            !contentType.equals("image/png"))) {
+                                return ResponseEntity.badRequest().body(Map.of(
+                                        "success", false,
+                                        "message", "Chỉ chấp nhận ảnh JPG/PNG"
+                                ));
+                            }
+
+                            String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+                            Path path = Paths.get("src/main/resources/static/images/" + fileName);
+                            Files.createDirectories(path.getParent());
+                            Files.copy(file.getInputStream(), path, StandardCopyOption.REPLACE_EXISTING);
+                            imagePaths.add("/images/" + fileName);
+                        }
+                    }
+
+                    chiTietSanPham.setHinhAnh(String.join(",", imagePaths));
+
+                    // Thêm mô tả
+                    NhanVien nhanVien = nhanVienService.getNhanVienByEmail(getCurrentUserEmail());
+                    String moTa = "Thêm mới bởi " + nhanVien.getHoVaTen() + " vào " +
+                            new SimpleDateFormat("dd/MM/yyyy HH:mm").format(new Date());
+                    chiTietSanPham.setMoTa(moTa);
+
+                    lstCTSPNew.add(chiTietSanPham);
+
+                } catch (NumberFormatException e) {
+                    return ResponseEntity.badRequest().body(Map.of(
+                            "success", false,
+                            "message", "Dữ liệu không hợp lệ ở dòng " + (index + 1)
+                    ));
+                } catch (IOException e) {
+                    return ResponseEntity.badRequest().body(Map.of(
+                            "success", false,
+                            "message", "Lỗi khi lưu ảnh"
+                    ));
+                }
+
+                index++;
+            }
+
+            // Kiểm tra nếu không có dòng nào hợp lệ
+            if (lstCTSPNew.isEmpty()) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "message", "Không có biến thể nào được thêm"
+                ));
+            }
+
+            // Lưu danh sách vào DB
+            for (ChiTietSanPham ct : lstCTSPNew) {
+                chiTietSanPhamService.saveChiTietSanPham(ct);
+            }
+            return ResponseEntity.ok().body(Map.of(
+                    "success", true,
+                    "message", "Thêm thành công " + lstCTSPNew.size() + " biến thể"
+            ));
+
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            return ResponseEntity.internalServerError().body(Map.of(
+                    "success", false,
+                    "message", "Lỗi hệ thống: " + ex.getMessage()
+            ));
         }
-
     }
-
 
 }
